@@ -1,5 +1,10 @@
 2005-05-11  Bruno Haible  <bruno@clisp.org>
 
+	* intelem.d (FN_MSD): Define in a way that doesn't require the sintDD
+	type.
+
+2005-05-11  Bruno Haible  <bruno@clisp.org>
+
 	Fix bug introduced on 2005-01-27.
 	* lispbibl.d (defined_class_length): New macro.
 	(built_in_class_length): Define based on defined_class_length.
